--- a/style/index.css
+++ b/style/index.css
@@ -53,7 +53,7 @@ main {
 }
 
 footer {
-    margin-top: 10.4vw;
+    margin-top: 3.4vw;
     background-color: #212121;
     border-top: 0.5vw solid black;
     width: 100%;
@@ -72,8 +72,37 @@ main>section>img {
     border-radius: 10%;
 }
 
-#backbtn {
-    font-size: 20vw;
+#back {
+    font-size: 30vw;
     text-align: center;
+    height: 10vh;
+    background-color: black;
+    color: rgb(255, 0, 255);
+    border-radius: 2vw;
+    border: 0.5vw #ff00ff solid;
+    transition: all .2s ease-in-out;
+    margin-top: 2vw;
+    margin-bottom: 0;
+    width: 20vw;
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
+#backbtn {
+    font-size: 5vw;
+}
+
+#back:hover {
+    transform: scale(1.05);
+    -webkit-box-shadow: 10px 10px 28px 0px rgba(255, 0, 255, 1);
+    -moz-box-shadow: 10px 10px 28px 0px rgba(255, 0, 255, 1);
+    box-shadow: 10px 10px 28px 0px rgba(255, 0, 255, 1);
+    cursor: pointer;
+}
+
+#test {
+    margin-top: 10.4vw;
 }
