--- a/style/podstrony.css
+++ b/style/podstrony.css
@@ -88,7 +88,7 @@ form {
     transition: .2s;
 }
 
-section {
+#backbtn {
     background-color: black;
     border: 0.5vw #ff00ff solid;
     width: 5vw;
@@ -103,7 +103,7 @@ section {
     justify-content: center;
 }
 
-section:hover {
+#backbtn:hover {
     -webkit-box-shadow: 10px 10px 28px 0px rgba(255, 0, 255, 1);
     -moz-box-shadow: 10px 10px 28px 0px rgba(255, 0, 255, 1);
     box-shadow: 10px 10px 28px 0px rgba(255, 0, 255, 1);
