--- a/style/index.css
+++ b/style/index.css
@@ -66,7 +66,7 @@ footer>p {
     margin-top: 0.9vw;
 }
 
-main>section>img {
+.btn>img {
     width: 15vw;
     height: 17vw;
     border-radius: 10%;
@@ -89,9 +89,6 @@ main>section>img {
     display: flex;
     justify-content: center;
     align-items: center;
-}
-
-#backbtn {
     font-size: 5vw;
 }
 
@@ -105,4 +102,7 @@ main>section>img {
 
 #test {
     margin-top: 10.4vw;
+}
+a{
+    text-decoration: none;
 }
