--- a/style/index.css
+++ b/style/index.css
@@ -53,7 +53,7 @@ main {
 }
 
 footer {
-    margin-top: 3.4vw;
+    margin-top: 3%;
     background-color: #212121;
     border-top: 0.5vw solid black;
     width: 100%;
