--- a/style/podstrony.css
+++ b/style/podstrony.css
@@ -35,7 +35,7 @@ input {
     background-color: #212121;
     border: 0.2vw solid #ff00ff;
     color: white;
-    border-radius: 2%
+    border-radius: 0.2vw;
 }
 
 
@@ -58,7 +58,7 @@ form {
     background-color: black;
     width: 30vw;
     padding: 2em;
-    border-radius: 10%;
+    border-radius: 2vw;
     -webkit-box-shadow: 10px 10px 28px 0px rgba(255, 0, 255, 1);
     -moz-box-shadow: 10px 10px 28px 0px rgba(255, 0, 255, 1);
     box-shadow: 10px 10px 28px 0px rgba(255, 0, 255, 1);
@@ -68,7 +68,9 @@ form {
 .fbts:hover {
     cursor: pointer;
 }
-
+.fbts{
+    margin-top: 0.1vw;
+}
 #container {
     display: flex;
     justify-content: space-evenly;
@@ -115,4 +117,13 @@ form {
 a {
     text-decoration: none;
     color: violet;
+}
+#just{
+    margin-left: auto;
+    margin-right: auto;
+    background-color: black;
+    width: fit-content;
+    padding: 1vw;
+    border: 0.5vw #ff00ff solid;
+    border-radius: 2vw;
 }
